# sugarcare

./: ModelTraining.ipynb  pyproject.toml
